# cli-agentic-workflow

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  LICENSE  README.md  gate_probe.py  pyproject.toml  release-please-config.json
.codex/: hooks.json
.github/workflows/: ci.yml  release-build.yml  release-please.yml  release.yml
docs/: release-flow.md
docs/adr/: 0001-local-first-python-bash-workflow-kernel.md  0002-pattern-iteration-as-run-groups.md  0003-asyncio-executor-concurrency-model.md  0004-python-stack-and-toolchain.md  0005-release-and-versioning-model.md  0006-adapter-interface-contract.md  0007-when-predicates-and-skip-semantics.md  0008-pattern-expanders-compile-to-plain-ir.md  0009-pattern-controller-infrastructure.md  0010-await-parking-and-the-human-gate.md
src/caw/: cli.py  (+18 more)
tests/: conftest.py  test_adversarial_cli_seam.py  test_adversarial_controller_seam.py  test_adversarial_resume_seam.py  test_agent_node_seam.py  test_claude_print_adapter.py  test_cli_seam.py  test_codex_exec_adapter.py  test_controller_resume_seam.py  test_controller_seam.py  test_e2e_harness.py  test_events_seam.py  test_executor_seam.py  test_fanout_cli_seam.py  test_github_workflows.py  test_group_report_seam.py  test_loop_cli_seam.py  test_model.py  test_output_contract.py  test_pattern_cli_seam.py  test_pattern_expander.py  test_report_seam.py  test_run_directory_seam.py  test_run_group_layout_seam.py  test_state_store.py  test_subprocess_adapter.py  test_tournament_cli_seam.py  test_tournament_controller_seam.py  test_tournament_resume_seam.py  test_version_source.py
(+26 files in other folders)
