[project]
name = "caw"
version = "0.3.0"
description = "A lightweight, local-first workflow kernel and CLI that composes external agent CLI entrypoints into explicit, inspectable, repeatable workflow runs."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
dependencies = [
    "jsonschema>=4.26.0",
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
]

[project.scripts]
caw = "caw.cli:app"

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "types-jsonschema>=4.26.0.20260518",
    "types-pyyaml>=6.0",
]

[build-system]
requires = ["uv_build>=0.11,<0.13"]
build-backend = "uv_build"

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
